# VocalFlow

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  transcribe.py
.github/workflows/: ci.yml  publish.yml  release.yml
